--- a/extension/compass.ini
+++ b/extension/compass.ini
@@ -1,6 +1,6 @@
 extension=compass
 
 compass.enabled="${COMPASS_ENABLED}"
-compass.mode="${COMPASS_MODE}"
-compass.header="${COMPASS_HEADER}"
-compass.function_threshold="${COMPASS_FUNCTION_THRESHOLD}"
+# compass.mode="${COMPASS_MODE}"
+# compass.header="${COMPASS_HEADER}"
+# compass.function_threshold="${COMPASS_FUNCTION_THRESHOLD}"
