--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -70,7 +70,7 @@ jobs:
         with:
           name: ${{ matrix.configuration }}
           path: |
-            ./output
+            /tmp/output
 
   results:
     name: Compare Results
