--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,15 @@
 {
   "build": {
     "dockerfile": "Dockerfile"
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "rust-lang.rust-analyzer",
+        "dustypomerleau.rust-syntax",
+        "golang.go",
+        "nicknickolaev.ebpf-assembly"
+      ]
+    }
   }
 }
