--- a/.github/workflows/performance/matrix/collector/docker-compose.yml
+++ b/.github/workflows/performance/matrix/collector/docker-compose.yml
@@ -35,6 +35,10 @@ services:
     user: root
     privileged: true
     pid: host
+    environment:
+      # Set all the thresholds to 0 so we can profile every request.
+      - COMPASS_FUNCTION_THRESHOLD=0
+      - COMPASS_REQUEST_THRESHOLD=0
 
 volumes:
   public-files: {}
