Compass vs New Relic

--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -23,6 +23,7 @@ jobs:
           - installed # Compass installed but not enabled.
           - enabled   # Compass enabled by collector not running.
           - collector # Compass enabled and collector running.
+          - newrelic  # Compare to New Relic
 
     steps:
       - name: ⬇️ Git clone the repository
