--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -39,3 +39,35 @@ jobs:
 
           docker build -t ${IMAGE}-amd64 --platform=linux/amd64 --build-arg=PHP_VERSION=8.3 .
           docker build -t ${IMAGE}-arm64 --platform=linux/arm64 --build-arg=PHP_VERSION=8.3 .
+
+
+name: image-build
+
+on:
+  workflow_dispatch:
+
+env:
+  USER: ${{secrets.DOCKER_USER}}
+
+jobs:
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            arch: amd64
+          - os: ubuntu-22.04-arm
+            arch: arm64
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{env.USER}}
+          password: ${{secrets.DOCKER_PAT}}
+      - name: Build and push
+        run: |
+            IMAGE=${{ env.REGISTRY }}/${{ github.repository }}:latest
+            docker build -t ${IMAGE}-${{matrix.arch}} --platform=linux/amd64 --build-arg=PHP_VERSION=8.3 .
