--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,13 @@ services:
     privileged: true
     pid: host
     user: root
+
+  jaeger:
+    image: jaegertracing/all-in-one:1.63.0
+    restart: always
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+    ports:
+      - "16686:16686"
+      - "4317:4317"
+      - "4318:4318"
