--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -8,14 +8,24 @@ concurrency:
   group: build-test-${{ github.head_ref }}
   cancel-in-progress: true
 
-jobs:
-  test:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: ⬇️ Git clone the repository
-        uses: actions/checkout@v4
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
-      - name: 📦 Build Images
+jobs:
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            arch: amd64
+          - os: ubuntu-24.04-arm 
+            arch: arm64
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Build and push
         run: |
-          docker build --no-cache --build-arg=PHP_VERSION=8.3 -t localhost/compass:latest .
+            IMAGE=${{ env.REGISTRY }}/${{ github.repository }}:latest
+            docker build -t ${IMAGE}-${{matrix.arch}} --build-arg=PHP_VERSION=8.3 .
