--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,15 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            arch: amd64
+          - os: ubuntu-24.04-arm
+            arch: arm64
 
     permissions:
       contents: read
@@ -32,12 +40,29 @@ jobs:
 
       - name: 📦 Build
         run: |
-          docker build --no-cache --build-arg=PHP_VERSION=8.3 -t ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.ref_name }}-php8.3 .
-          docker build --no-cache --build-arg=PHP_VERSION=8.2 -t ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.ref_name }}-php8.2 .
-          docker build --no-cache --build-arg=PHP_VERSION=8.1 -t ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.ref_name }}-php8.1 .
+          IMAGE=${{ env.REGISTRY }}/${{ github.repository }}:${{ github.ref_name }}
+          docker build --no-cache --build-arg=PHP_VERSION=8.3 -t ${IMAGE}-php8.3-${{ matrix.arch }} .
+          docker build --no-cache --build-arg=PHP_VERSION=8.2 -t ${IMAGE}-php8.2-${{ matrix.arch }} .
+          docker build --no-cache --build-arg=PHP_VERSION=8.1 -t ${IMAGE}-php8.1-${{ matrix.arch }} .
 
       - name: ☁️ Push
         run: |
-          docker push ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.ref_name }}-php8.3
-          docker push ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.ref_name }}-php8.2
-          docker push ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.ref_name }}-php8.1
+          IMAGE=${{ env.REGISTRY }}/${{ github.repository }}:${{ github.ref_name }}
+          docker push ${IMAGE}-php8.3-${{matrix.arch}}
+          docker push ${IMAGE}-php8.2-${{matrix.arch}}
+          docker push ${IMAGE}-php8.1-${{matrix.arch}}
+
+  manifest:
+    name: Manifest
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+     - name: ☁️ Push
+        run: |
+          IMAGE=${{ env.REGISTRY }}/${{ github.repository }}:${{ github.ref_name }}
+          docker manifest create ${IMAGE}-php8.3 --amend ${IMAGE}-php8.3-arm64 --amend ${IMAGE}-php8.3-amd64
+          docker manifest push ${IMAGE}-php8.3
+          docker manifest create ${IMAGE}-php8.2 --amend ${IMAGE}-php8.2-arm64 --amend ${IMAGE}-php8.2-amd64
+          docker manifest push ${IMAGE}-php8.2
+          docker manifest create ${IMAGE}-php8.1 --amend ${IMAGE}-php8.1-arm64 --amend ${IMAGE}-php8.1-amd64
+          docker manifest push ${IMAGE}-php8.1
