--- a/extension/Cargo.toml
+++ b/extension/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["lib", "cdylib"]
 
 [dependencies]
 anyhow = "1.0.80"
-phper = { git = "https://github.com/phper-framework/phper.git", version = "0.14.0" }
+phper = "0.14.1"
 probe = "0.5"
 once_cell = "1.18.0"
 nix = "0.29.0"
