--- a/extension/Cargo.toml
+++ b/extension/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["lib", "cdylib"]
 
 [dependencies]
 anyhow = "1.0.80"
+coarsetime = "0.1.35"
 phper = "0.14.1"
 probe = "0.5"
 once_cell = "1.18.0"
