Update Rust and Go dependencies

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,12 +6,9 @@ RUN apk add --no-cache curl && \
     curl -sSL https://packages.skpr.io/php-alpine/skpr.rsa.pub -o /etc/apk/keys/skpr.rsa.pub && \
     echo "https://packages.skpr.io/php-alpine/3.20/php8.3" >> /etc/apk/repositories
 
-RUN apk add cargo \
-            clang-dev \
+RUN apk add clang-dev \
             go \
             git \
-            rust \
-            rustfmt \
             php8.3-dev \ 
             ca-certificates \
             llvm \
@@ -21,5 +18,7 @@ RUN apk add cargo \
             alpine-sdk \
             linux-headers \
             bpftool
+
+RUN apk add cargo rust rustfmt --repository=http://dl-cdn.alpinelinux.org/alpine/edge/main
 
 ENV RUST_BACKTRACE=full
