--- a/extension/Cargo.toml
+++ b/extension/Cargo.toml
@@ -18,3 +18,10 @@ chrono = "0.4.41"
 tracing = "0.1.41"
 rustc-hash = "2.1.1"
 cached = "0.46"
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = true
