--- a/extension/Cargo.toml
+++ b/extension/Cargo.toml
@@ -16,3 +16,12 @@ once_cell = "1.21.3"
 nix = "0.30.1"
 chrono = "0.4.41"
 tracing = "0.1.41"
+rustc-hash = "2.1.1"
+cached = "0.46"
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = true
