--- a/.github/workflows/performance/docker/compose/php-fpm/services.yml
+++ b/.github/workflows/performance/docker/compose/php-fpm/services.yml
@@ -75,7 +75,7 @@ parameters:
     #
     # Not recommended in production environments
     # @default true
-    cache: true
+    cache: false
   renderer.config:
     # Renderer required cache contexts:
     #
@@ -153,3 +153,7 @@ parameters:
     - sftp
     - webcal
     - rtsp
+
+services:
+  cache.backend.null:
+    class: Drupal\Core\Cache\NullBackendFactory
