Build, test and performance on push to patchy

--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -3,6 +3,9 @@ name: 📋 Performance Test
 on:
   pull_request:
     types: [ synchronize, opened, reopened, ready_for_review ]
+  push:
+    branches:
+      - 'patchy'
 
 concurrency:
   group: performance-test-${{ github.head_ref }}
