--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -3,6 +3,9 @@ name: 📋 Build and Test
 on:
   pull_request:
     types: [ synchronize, opened, reopened, ready_for_review ]
+  push:
+    branches:
+      - 'patchy'
 
 concurrency:
   group: build-test-${{ github.head_ref }}
