--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,11 @@ services:
   compass:
     image: local/compass:latest
     command: /bin/bash -c "sleep infinity"
-    network_mode: service:nginx
     # Compass needs these.
     privileged: true
     pid: host
     user: root
+    network_mode: host
 
   jaeger:
     image: jaegertracing/all-in-one:1.63.0
