--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
 
   compass:
     image: local/compass:latest
-    command: /bin/bash -c "sleep infinity"
+    command: compass-sidecar
     network_mode: service:nginx
     # Compass needs these.
     privileged: true
