Adds Token auth

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
   compass:
     image: local/compass:latest
     command: compass-sidecar
+    # environment:
+    #   - COMPASS_SIDECAR_TOKEN=xxxyyyzzz
     network_mode: service:nginx
     # Compass needs these.
     privileged: true
