--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,24 +1,28 @@
-FROM golang:1.24-alpine3.21
+FROM ghcr.io/skpr/php-cli:8.4-v2-stable
 
 USER root
 
-RUN apk add --no-cache curl && \
-    curl -sSL https://packages.skpr.io/php-alpine/skpr.rsa.pub -o /etc/apk/keys/skpr.rsa.pub && \
-    echo "https://packages.skpr.io/php-alpine/3.20/php8.3" >> /etc/apk/repositories
-
-RUN apk add clang-dev \
-            go \
-            git \
-            php8.3-dev \ 
-            ca-certificates \
-            llvm \
+RUN apk add alpine-sdk \
+            bpftool \
             clang \
+            clang-dev \
+            git \
             libbpf-dev \
-            make \
-            alpine-sdk \
             linux-headers \
-            bpftool
+            llvm \
+            php8.4-dev
 
-RUN apk add cargo rust rustfmt --repository=http://dl-cdn.alpinelinux.org/alpine/edge/main
+ENV MISE_DATA_DIR="/mise"
+ENV MISE_CONFIG_DIR="/mise"
+ENV MISE_CACHE_DIR="/mise/cache"
+ENV MISE_INSTALL_PATH="/usr/local/bin/mise"
+ENV PATH="/mise/shims:$PATH"
+
+RUN curl https://mise.run | sh
+
+# Make libclang easy to find for bindgen
+ENV LIBCLANG_PATH=/usr/lib/llvm19/lib
+
+ENV RUSTFLAGS="-C target-feature=-crt-static"
 
 ENV RUST_BACKTRACE=full
