--- a/.github/workflows/performance/matrix/collector/docker-compose.yml
+++ b/.github/workflows/performance/matrix/collector/docker-compose.yml
@@ -35,10 +35,13 @@ services:
     user: root
     privileged: true
     pid: host
-    environment:
-      # Set all the thresholds to 0 so we can profile every request.
-      - COMPASS_SIDECAR_FUNCTION_THRESHOLD=0
-      - COMPASS_SIDECAR_REQUEST_THRESHOLD=0
+
+  curl:
+    image: alpine:latest
+    network_mode: service:nginx
+    command: sh -c "apk add --no-cache curl && curl -v http://localhost:28624/v1/traces"
+    depends_on:
+      - compass
 
 volumes:
   public-files: {}
