--- a/.github/workflows/performance/matrix/collector/docker-compose.yml
+++ b/.github/workflows/performance/matrix/collector/docker-compose.yml
@@ -32,9 +32,10 @@ services:
 
   compass:
     image: localhost/compass:latest
-    user: root
     privileged: true
-    pid: host
+    pid: "service:php-fpm"
+    depends_on:
+      - php-fpm
 
   curl:
     image: alpine:latest
