--- a/.github/workflows/performance/matrix/collector/docker-compose.yml
+++ b/.github/workflows/performance/matrix/collector/docker-compose.yml
@@ -30,15 +30,20 @@ services:
       interval: 1s
       retries: 60
 
-  collector:
+  compass:
     image: localhost/compass:latest
-    user: root
+    network_mode: service:nginx
     privileged: true
-    pid: host
-    environment:
-      # Set all the thresholds to 0 so we can profile every request.
-      - COMPASS_SIDECAR_FUNCTION_THRESHOLD=0
-      - COMPASS_SIDECAR_REQUEST_THRESHOLD=0
+    pid: "service:php-fpm"
+    depends_on:
+      - php-fpm
+
+  curl:
+    image: alpine:latest
+    network_mode: service:nginx
+    command: sh -c "apk add --no-cache curl && curl -v http://localhost:28624/v1/traces"
+    depends_on:
+      - compass
 
 volumes:
   public-files: {}
