--- a/mise.toml
+++ b/mise.toml
@@ -4,6 +4,9 @@ rust = "1.91.1"
 "go:github.com/cilium/ebpf/cmd/bpf2go" = { version = "v0.19.0" }
 "ubi:golangci/golangci-lint" = "2.6.2"
 
+[env]
+CGO_ENABLED = 0
+
 [tasks."go:vendor"]
 description = "Vendor resets the main module's vendor directory to include all packages needed to build the application"
 run = "go mod vendor"
