--- a/extension/.devcontainer/devcontainer.json
+++ b/extension/.devcontainer/devcontainer.json
@@ -6,9 +6,7 @@
     "vscode": {
       "extensions": [
         "rust-lang.rust-analyzer",
-        "dustypomerleau.rust-syntax",
-        "golang.go",
-        "nicknickolaev.ebpf-assembly"
+        "dustypomerleau.rust-syntax"
       ]
     }
   }
