--- a/tracing/sidecar/Dockerfile
+++ b/tracing/sidecar/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.21
+FROM alpine:3.21 AS build
 
 USER root
 
@@ -23,3 +23,20 @@ RUN curl https://mise.run | sh
 
 # Make libclang easy to find for bindgen
 ENV LIBCLANG_PATH=/usr/lib/llvm19/lib
+
+ENV GOFLAGS=-buildvcs=false
+
+WORKDIR /data
+ADD --chown=skpr:skpr . /data
+
+# Check and build.
+RUN mise trust .
+RUN mise run lint
+RUN mise run test
+RUN mise run build:sidecar
+
+FROM scratch
+
+COPY --from=build /data/_output/compass-sidecar /usr/local/bin/compass-sidecar
+ENV COMPASS_SIDECAR_PROCESS_NAME=php-fpm
+CMD ["compass-sidecar"]
