--- a/docker/compose/php-fpm/Dockerfile
+++ b/docker/compose/php-fpm/Dockerfile
@@ -18,5 +18,5 @@ COPY drush /etc/drush
 
 RUN PHP_MEMORY_LIMIT=-1 vendor/bin/drush si demo_umami --db-url=sqlite://sites/default/files/.ht.sqlite
 
-COPY --from=local/compass:latest /etc/php/conf.d/00_compass.ini /etc/php/conf.d/00_compass.ini
-COPY --from=local/compass:latest /usr/lib/php/modules/compass.so /usr/lib/php/modules/compass.so
+COPY --from=localhost/compass-extension:latest /etc/php/conf.d/00_compass.ini /etc/php/conf.d/00_compass.ini
+COPY --from=localhost/compass-extension:latest /usr/lib/php/modules/compass.so /usr/lib/php/modules/compass.so
