--- a/tracing/mise.toml
+++ b/tracing/mise.toml
@@ -6,14 +6,17 @@ go = "1.24"
 [env]
 CGO_ENABLED = 0
 
-[tasks."go:vendor"]
+[tasks.s]
+run = "env"
+
+[tasks.vendor]
 description = "Vendor resets the main module's vendor directory to include all packages needed to build the application"
 run = "go mod vendor"
 
 [tasks.lint]
 description = "Run linting on all tracer components"
 run = "golangci-lint run"
-depends = ["generate", "go:vendor"]
+depends = ["generate", "vendor"]
 
 [tasks.test]
 description = "Run tests for all tracer components"
@@ -22,13 +25,24 @@ depends = ["generate"]
 
 [tasks.generate]
 description = "Generate BPF artifacts"
-file = "scripts/generate.sh"
-depends = ["go:vendor"]
+run = '''
+#!/usr/bin/env bash
+cd collector
+bpftool btf dump file /sys/kernel/btf/vmlinux format c > ./includes/vmlinux.h
+GOPACKAGE=collector bpf2go -cflags '-O2 -g -Wall -Werror' -type event bpf program/$(uname -m).bpf.c -- -I./includes
+'''
+depends = ["vendor"]
 
 [tasks.build]
-description = "Build Compass binaries"
-run = [
-  "go build -a -o _output/compass github.com/skpr/compass/tracing/cli",
-  "go build -a -o _output/compass-sidecar github.com/skpr/compass/tracing/sidecar"
-]
+description = "Build all Compass tracing binaries"
+depends = ["build:cli", "build:sidecar"]
+
+[tasks."build:cli"]
+description = "Build Compass CLI"
+run = "go build -a -o _output/compass github.com/skpr/compass/tracing/cli"
+depends = ["generate"]
+
+[tasks."build:sidecar"]
+description = "Build Compass tracing binaries"
+run = "go build -a -o _output/compass-sidecar github.com/skpr/compass/tracing/sidecar"
 depends = ["generate"]
