--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -1,4 +1,4 @@
-name: "📋 Release Sidecar"
+name: "📋 Release CLI"
 
 on:
   push:
@@ -40,8 +40,8 @@ jobs:
 
       - name: 📦 Build and Push
         run: |
-          IMAGE=${{ env.REGISTRY }}/${{ github.repository }}-sidecar:${{ github.ref_name }}-${{ matrix.arch }}
-          docker build --no-cache -t ${IMAGE} -f tracing/sidecar/Dockerfile tracing
+          IMAGE=${{ env.REGISTRY }}/${{ github.repository }}:${{ github.ref_name }}-${{ matrix.arch }}
+          docker build --no-cache -t ${IMAGE} -f tracing/cli/Dockerfile tracing
           docker push ${IMAGE}
 
   manifest:
@@ -65,6 +65,6 @@ jobs:
 
       - name: ☁️ Push
         run: |
-          IMAGE=${{ env.REGISTRY }}/${{ github.repository }}-sidecar:${{ github.ref_name }}
+          IMAGE=${{ env.REGISTRY }}/${{ github.repository }}:${{ github.ref_name }}
           docker manifest create ${IMAGE} --amend ${IMAGE}-arm64 --amend ${IMAGE}-amd64
           docker manifest push ${IMAGE}
